--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "fetch": "^1.1.0",
+    "nodemailer": "^7.0.10",
     "ytdl-core": "^4.11.5"
   }
 }
